# athlete-lens

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  setup.sh
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/api/: main.py  schemas.py
backend/api/routes/: acoustic.py  horizontal.py  sessions.py  sprint.py  vertical.py
backend/core/acoustic/: audio_extractor.py  extractor.py
backend/core/sprint/: README.md  extractor.py
backend/core/vertical/: README.md  extractor.py
backend/db/: crud.py  database.py  models.py
backend/notebooks/: explore_audio.py  explore_sprint_video.py  explore_video.py
backend/tests/: README.md  conftest.py
backend/tests/api/: test_acoustic.py  test_horizontal.py  test_sessions.py  test_sprint.py  test_vertical.py
backend/tests/core/acoustic/: test_extractor.py
backend/tests/core/sprint/: test_extractor.py
backend/tests/core/vertical/: test_extractor.py
frontend/: .env.example  README.md  index.html  package-lock.json  vite.config.js
frontend/public/: manifest.json  sw.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: UploadAcoustic.jsx  UploadHorizontal.jsx  UploadSprint.jsx  UploadVertical.jsx
frontend/src/lib/: api.js
frontend/src/pages/: Dashboard.jsx  History.jsx  Upload.jsx  UploadVertical.jsx
