[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "librosa>=0.11.0",
    "opencv-python>=4.13.0.92",
    "pytest>=9.0.3",
    "python-multipart>=0.0.32",
    "scipy>=1.17.1",
    "sqlalchemy>=2.0.50",
    "ultralytics>=8.4.64",
    "uvicorn>=0.49.0",
]
